bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:1: error: type mismatch;
 found   : Int(100)
 required: Boolean
def nearHundred(n:Int): Boolean = {if (90<n-10<100) {return true}; else if (190<n-10<200) {return true}; else {return false}
                                               ^NearHundred:1: error: type mismatch;
 found   : Int(200)
 required: Boolean
def nearHundred(n:Int): Boolean = {if (90<n-10<100) {return true}; else if (190<n-10<200) {return true}; else {return false}
                                                                                     ^