bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {if (90<n-10<100) {return true}; else if (190<n-10<200) {return true}; else {return false}
}